--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Yong Jae Lee</a></span>
+							<span style="font-size:24px"><a href="https://pages.cs.wisc.edu/~yongjaelee/">Yong Jae Lee</a></span>
 						</center>
 					</td>
 				</tr>
