--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Creative and Descriptive Paper Title</span>
+		<span style="font-size:36px">On the Effectiveness of Dataset Alignment for Fake Image Detection</span>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
