--- a/index.html
+++ b/index.html
@@ -142,26 +142,27 @@
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px"><a href="https://anisundar18.github.io">Anirudh Sundara Rajan*</a></span>
-						</center>
+					<td align="center" width="150px">
+					    <center>
+					        <span style="font-size:20px; white-space:nowrap;"><a href="https://anisundar18.github.io">Anirudh Sundara Rajan*</a></span>
+					    </center>
 					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px"><a href="https://utkarshojha.github.io">Utkarsh Ojha*</a></span>
-						</center>
+					<td align="center" width="150px">
+					    <center>
+					        <span style="font-size:20px; white-space:nowrap;"><a href="https://utkarshojha.github.io">Utkarsh Ojha*</a></span>
+					    </center>
 					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px"><a href="">Jedidiah Scholesser</a></span>
-						</center>
+					<td align="center" width="150px">
+					    <center>
+					        <span style="font-size:20px; white-space:nowrap;"><a href="">Jedidiah Scholesser</a></span>
+					    </center>
 					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px"><a href="https://pages.cs.wisc.edu/~yongjaelee/">Yong Jae Lee</a></span>
-						</center>
+					<td align="center" width="150px">
+					    <center>
+					        <span style="font-size:20px; white-space:nowrap;"><a href="https://pages.cs.wisc.edu/~yongjaelee/">Yong Jae Lee</a></span>
+					    </center>
 					</td>
+
 				</tr>
 			</table>
 			<table align=center width=250px>
