--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
-					<td align="center" width="150px">
+					<td align="center" width="150px" style="padding-right: 20px;">
 					    <center>
 					        <span style="font-size:20px; white-space:nowrap;"><a href="https://anisundar18.github.io">Anirudh Sundara Rajan*</a></span>
 					    </center>
 					</td>
-					<td align="center" width="150px">
+					<td align="center" width="150px" style="padding-right: 20px;">
 					    <center>
 					        <span style="font-size:20px; white-space:nowrap;"><a href="https://utkarshojha.github.io">Utkarsh Ojha*</a></span>
 					    </center>
 					</td>
-					<td align="center" width="150px">
+					<td align="center" width="150px" style="padding-right: 20px;">
 					    <center>
 					        <span style="font-size:20px; white-space:nowrap;"><a href="">Jedidiah Scholesser</a></span>
 					    </center>
