--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:500px" src="./resources/fake_inv_teaser.png"/>
 					</center>
 				</td>
 			</tr>
