--- a/index.html
+++ b/index.html
@@ -216,7 +216,11 @@
 	<hr>
 	<center><h1>Talk</h1></center>
 	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+		<tr>
+			<td>
+				Resolution mismatch can cause spurious correlations, we observe such issues in several prominent fake image detectors. For latent diffusion models, we propose a simple solution, where we reconstruct the real images by passing them through the autoencoder of the latent model. Existing methods use images at different resolutions to train a detector. Furthermore, the semantic content is also different. Such misalignment can force the detector to learn spurious correlations. Some popular baselines associate resizing artifacts with real/fake images. Our method can mitigate the learning of such false patterns.
+			</td>
+		</tr>
 	</p>
 
 	<table align=center width=800px>
