--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
 				We observe that using misaligned data (in terms of resolution, compression etc) to train a fake image detector can induce the learning of false patterns. For the family of latent-diffusion models, we propose a simple fix. We reconstruct the real images using the latent diffusion VAE (instead of relying on the denoising process) and train a fake image detector on those images. We empirically demonstrate that a model trained this way is less-likely to learn spurious correlations. For example, an existing method (Corvi) learns to associate upsampling with fake images and downsampling with real images, by training the same detector using our approach we are able to sidestep such issues.
 			</td>
 		</tr>
+		<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/resizing_plots.png"/>
+					</center>
+				</td>
+			</tr>
 	</table>
 	<br>
 
