--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<center><h1>Brief Overview</h1></center>
 		<tr>
 			<td>
-				We observe that using misaligned data (in terms of resolution, compression etc) to train a fake image detector can induce the learning of false patterns. For the family of latent-diffusion models, we propose a simple fix. We reconstruct the real images using the latent diffusion VAE (instead of relying on the denoising process) and train a fake image detector on those images. We empirically demonstrate that a model trained this way is less-likely to learn spurious correlations. For example, an existing method (Corvi) learns to associate upsampling with fake images and downsampling with real images, by training the same detector using our approach we are able to sidestep such issues.
+				We observe that using misaligned data (in terms of resolution, compression etc) to train a fake image detector can induce the learning of false patterns. For the family of latent-diffusion models, we propose a simple fix. We reconstruct the real images using the latent diffusion VAE (instead of relying on the denoising process) and train a fake image detector on those images. We empirically demonstrate that a model trained this way is less-likely to learn spurious correlations. For example, an existing method learns to associate upsampling with fake images and downsampling with real images, by training the same detector using our approach we are able to sidestep such issues.
 			</td>
 		</tr>
 		<tr>
@@ -227,7 +227,31 @@
 						<img class="round" style="width:500px" src="./resources/resizing_plots.png"/>
 					</center>
 				</td>
-			</tr>
+		</tr>
+		<tr>
+			<td>
+				Since our dataset curation does not rely on the denoising step, our dataset curation process is computationally inexpensive compared to the existing paradigm of generating with the denoising process. 
+			</td>
+		</tr>
+		<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/compute.png"/>
+					</center>
+				</td>
+		</tr>
+			<tr>
+			<td>
+				In addition to being computationally inexpensive, our method is also more data-efficient. Since the real and fake images are near-identical, the detector is forced to look for more fundamental patterns as opposed to semantic patterns during training.
+			</td>
+		</tr>
+		<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/data_eff.png"/>
+					</center>
+				</td>
+		</tr>
 	</table>
 	<br>
 
