--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser_shade.png"/>
+						<img class="round" style="width:500px" src="./resources/teaser_shade.jpg"/>
 					</center>
 				</td>
 		</tr>
