--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<center><h1>Brief Overview</h1></center>
 		<tr>
 			<td>
-				<b>Mitigating Spurious Correlations: </b>We observe that using misaligned data (in terms of resolution, compression etc) to train a fake image detector can induce the learning of false patterns. For the family of latent-diffusion models, we propose a simple fix. We reconstruct the real images using the latent diffusion VAE (instead of relying on the denoising process) and train a fake image detector on those images. We empirically demonstrate that a model trained this way is less-likely to learn spurious correlations. For example, an existing method learns to associate upsampling with fake images and downsampling with real images, by training the same detector using our approach we are able to sidestep such issues.
+				<b>Mitigating Spurious Correlations:</b> We observe that using misaligned data (in terms of resolution, compression etc) to train a fake image detector can induce the learning of false patterns. For the family of latent-diffusion models, we propose a simple fix. We reconstruct the real images using the latent diffusion VAE (instead of relying on the denoising process) and train a fake image detector on those images. We empirically demonstrate that a model trained this way is less-likely to learn spurious correlations. For example, an existing method learns to associate upsampling with fake images and downsampling with real images, by training the same detector using our approach we are able to sidestep such issues.
 			</td>
 		</tr>
 		<tr>
@@ -230,7 +230,7 @@
 		</tr>
 		<tr>
 			<td>
-				<b>Computational Efficiency: </b>Since our dataset curation does not rely on the denoising step, our dataset curation process is computationally inexpensive compared to the existing paradigm of generating with the denoising process. 
+				<b>Computational Efficiency:</b> Since our dataset curation does not rely on the denoising step, our dataset curation process is computationally inexpensive compared to the existing paradigm of generating with the denoising process. 
 			</td>
 		</tr>
 		<tr>
@@ -242,7 +242,7 @@
 		</tr>
 		<tr>
 			<td>
-				<b>Low Data Demand: </b>In addition to being computationally inexpensive, our method is also more data-efficient. Since the real and fake images are near-identical, the detector is forced to look for more fundamental patterns as opposed to semantic patterns during training.
+				<b>Low Data Demand:</b> In addition to being computationally inexpensive, our method is also more data-efficient. Since the real and fake images are near-identical, the detector is forced to look for more fundamental patterns as opposed to semantic patterns during training.
 			</td>
 		</tr>
 		<tr>
@@ -254,7 +254,7 @@
 		</tr>
 		<tr>
 			<td>
-				<b>Independent of semantic content: </b>Furthermore, by leveraging an aligned dataset, we can train an effective fake image detector, even if the training data is semantically unrelated to the testing data. We demonstrate this by training a model using graphics generated (shaders) data and testing it on natural images. The promising performance of a detector trained in such a manner shows the efficacy of dataset alignment.
+				<b>Independent of Semantic Content:</b> Furthermore, by leveraging an aligned dataset, we can train an effective fake image detector, even if the training data is semantically unrelated to the testing data. We demonstrate this by training a model using graphics generated (shaders) data and testing it on natural images. The promising performance of a detector trained in such a manner shows the efficacy of dataset alignment.
 			</td>
 		</tr>
 		<tr>
