--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
 				</td>
 		</tr>
 	</table>
-	<br>
+<!-- 	<br>
 
 	<hr>
 
 
 	<br>
-	<hr>
+	<hr> -->
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
@@ -286,7 +286,7 @@
 			<td><span style="font-size:14pt">Anirudh Sundara Rajan, Utkarsh Ojha, Jedidiah Schloesser, Yong Jae Lee.<br>
 				<b>On the Effectiveness of Dataset Alignment for Fake Image Detection</b><br>
 				In arXiv, 2024.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
+				(hosted on <a href="https://arxiv.org/pdf/2410.11835">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
