--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
 							<span style="font-size:24px"><a href='https://github.com/AniSundar18/AlignedForensics'>[GitHub]</a></span><br>
 						</center>
 					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:24px"><a href='https://drive.google.com/file/d/1JaUy-ce0Nvn3DGH5NZeVl4F-e7HyVJDJ/view?usp=sharing'>[Poster]</a></span><br>
+						</center>
+					</td>
 				</tr>
 			</table>
 		</table>
