--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
 			</table>
 			<table align=center width=250px>
 				<tr>
-					<td align=center width=120px>
+					<td align=center width=120px style="padding: 10px 20px;>
 						<center>
 							<span style="font-size:24px"><a href='https://arxiv.org/abs/2410.11835'>[Paper]</a></span>
 						</center>
 					</td>
-					<td align=center width=120px>
+					<td align=center width=120px style="padding: 10px 20px;>
 						<center>
 							<span style="font-size:24px"><a href='https://github.com/AniSundar18/AlignedForensics'>[GitHub]</a></span><br>
 						</center>
 					</td>
-					<td align=center width=120px>
+					<td align=center width=120pxstyle="padding: 10px 20px;>
 						<center>
 							<span style="font-size:24px"><a href='https://drive.google.com/file/d/1JaUy-ce0Nvn3DGH5NZeVl4F-e7HyVJDJ/view?usp=sharing'>[Poster]</a></span><br>
 						</center>
