--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 				<b>On the Effectiveness of Dataset Alignment for Fake Image Detection</b><br>
 				In arXiv, 2024.<br>
 				(hosted on <a href="https://arxiv.org/pdf/2410.11835">ArXiv</a>)<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br>
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
