--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper_fig.png"/></a></td>
+			<td><a href="https://arxiv.org/abs/2410.11835"><img class="layered-paper-big" style="height:175px" src="./resources/paper_fig.png"/></a></td>
 			<td><span style="font-size:14pt">Anirudh Sundara Rajan, Utkarsh Ojha, Jedidiah Schloesser, Yong Jae Lee.<br>
 				<b>On the Effectiveness of Dataset Alignment for Fake Image Detection</b><br>
 				In arXiv, 2024.<br>
-				(hosted on <a href="https://arxiv.org/pdf/2410.11835">ArXiv</a>)<br>
-				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br>
+				(hosted on <a href="https://arxiv.org/abs/2410.11835">ArXiv</a>)<br>
+<!-- 				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
