--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <html>
 <head>
-	<title>This is my paper title</title>
+	<title>AlignedForensics</title>
 	<meta property="og:image" content="fake_inv_teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
 	<meta property="og:title" content="On the Effectiveness of Dataset Alignment for Fake Image Detection" />
 	<meta property="og:description" content="Paper description." />
