--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
 	</center>
 
 	<center>
-		<table align=center width=850px>
-			<tr>
-				<td width=500px>
-					<center>
-						<img class="round" style="width:500px" src="./resources/fake_inv_teaser.png"/>
-					</center>
-				</td>
-			</tr>
+		<table align="center" width="850px">
+		    <tr>
+		        <td width="500px">
+		            <center>
+		                <img class="round" style="width:500px; height:500px" src="./resources/fake_inv_teaser.png"/>
+		            </center>
+		        </td>
+		    </tr>
 		</table>
 		<table align=center width=850px>
 			<tr>
