--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	<center>
 		<table align="center" width="850px">
 		    <tr>
-		        <td width="500px">
+		        <td>
 		            <center>
 		                <img class="round" style="width:800px; height:300px" src="./resources/fake_inv_teaser.png"/>
 		            </center>
@@ -229,7 +229,7 @@
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/resizing_plots.png"/>
+						<img img class="round" style="width:800px; height:300px src="./resources/resizing_plots.png"/>
 					</center>
 				</td>
 		</tr>
@@ -265,14 +265,14 @@
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser_shade.jpg"/>
+						<img img class="round" style="width:800px; height:300px src="./resources/teaser_shade.jpg"/>
 					</center>
 				</td>
 		</tr>
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/data_shade.png"/>
+						<img img class="round" style="width:800px; height:300px src="./resources/data_shade.png"/>
 					</center>
 				</td>
 		</tr>
