--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 				</tr>
 			</table>
-			<table align=center width=250px>
+			<table align=center width=1637px height=747px>
 				<tr>
 					<td align=center width=120px style="padding: 10px 20px;>
 						<center>
