--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 				</tr>
 			</table>
-			<table align=center width=1637px height=747px>
+			<table align=center width=600px>
 				<tr>
 					<td align=center width=120px style="padding: 10px 20px;>
 						<center>
@@ -192,7 +192,7 @@
 		    <tr>
 		        <td>
 		            <center>
-		                <img class="round" style="width:800px; height:300px" src="./resources/fake_inv_teaser.png"/>
+		                <img class="round" style="width:1637px; height:747px" src="./resources/fake_inv_teaser.png"/>
 		            </center>
 		        </td>
 		    </tr>
