--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/compute.png"/>
+						<img class="round" style="width:250px; height:250px" src="./resources/compute.png"/>
 					</center>
 				</td>
 		</tr>
