--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 		<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/data_eff.png"/>
+						<img class="round" style="width:395px; height:294px" src="./resources/data_eff.png"/>
 					</center>
 				</td>
 		</tr>
