--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 <head>
 	<title>AlignedForensics</title>
 	<meta property="og:image" content="fake_inv_teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="On the Effectiveness of Dataset Alignment for Fake Image Detection" />
-	<meta property="og:description" content="Paper description." />
+	<meta property="og:title" content="Aligned Datasets Improve Detection of Latent Diffusion-Generated Images" />
+	<meta property="og:description" content="ICLR 2025" />
 
 	<!-- Get from Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -138,7 +138,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">On the Effectiveness of Dataset Alignment for Fake Image Detection</span>
+		<span style="font-size:36px">Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</span>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
@@ -289,7 +289,7 @@
 		<tr>
 			<td><a href="https://arxiv.org/abs/2410.11835"><img class="layered-paper-big" style="height:175px" src="./resources/paper_fig.png"/></a></td>
 			<td><span style="font-size:14pt">Anirudh Sundara Rajan, Utkarsh Ojha, Jedidiah Schloesser, Yong Jae Lee.<br>
-				<b>On the Effectiveness of Dataset Alignment for Fake Image Detection</b><br>
+				<b>Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</b><br>
 				In arXiv, 2024.<br>
 				(hosted on <a href="https://arxiv.org/abs/2410.11835">ArXiv</a>)<br>
 <!-- 				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br> -->
