--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</span>
+		<span style="font-size:32px">Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</span>
+		<span style="font-size:24px; color:red;">ICLR 2025</span>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
