--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <head>
 	<title>AlignedForensics</title>
 	<meta property="og:image" content="fake_inv_teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="Aligned Datasets Improve Detection of Latent Diffusion-Generated Images" />
+	<meta property="og:title" content="Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets" />
 	<br>
 	<meta property="og:description" content="ICLR 2025" />
 
@@ -292,7 +292,7 @@
 		<tr>
 			<td><a href="https://arxiv.org/abs/2410.11835"><img class="layered-paper-big" style="height:175px" src="./resources/paper_fig.png"/></a></td>
 			<td><span style="font-size:14pt">Anirudh Sundara Rajan, Utkarsh Ojha, Jedidiah Schloesser, Yong Jae Lee.<br>
-				<b>Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</b><br>
+				<b>Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets</b><br>
 				In arXiv, 2024.<br>
 				(hosted on <a href="https://arxiv.org/abs/2410.11835">ArXiv</a>)<br>
 <!-- 				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br> -->
