--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:32px">Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</span>
+		<span style="font-size:32px">Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets</span>
 		<br>
 		<span style="font-size:24px; color:red;">ICLR 2025</span>
 		<table align=center width=600px>
