--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <head>
 	<title>AlignedForensics</title>
 	<meta property="og:image" content="fake_inv_teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets" />
+	<meta property="og:title" content="Aligned Datasets Improve Detection of Latent Diffusion-Generated Images" />
 	<br>
 	<meta property="og:description" content="ICLR 2025" />
 
@@ -139,7 +139,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:30px">Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets</span>
+		<span style="font-size:30px">Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</span>
 		<br><br>
 		<span style="font-size:24px; color:red;">ICLR 2025</span>
 		<br><br>
