--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 		<tr>
 			<td><a href="https://arxiv.org/abs/2410.11835"><img class="layered-paper-big" style="height:175px" src="./resources/paper_fig.png"/></a></td>
 			<td><span style="font-size:14pt">Anirudh Sundara Rajan, Utkarsh Ojha, Jedidiah Schloesser, Yong Jae Lee.<br>
-				<b>Improved Detection of Latent Diffusion-Generated Images through Aligned Datasets</b><br>
+				<b>Aligned Datasets Improve Detection of Latent Diffusion-Generated Images</b><br>
 				In arXiv, 2024.<br>
 				(hosted on <a href="https://arxiv.org/abs/2410.11835">ArXiv</a>)<br>
 <!-- 				(<a href="https://arxiv.org/pdf/2410.11835">camera ready</a>)<br> -->
